implemented login using a password